--- a/html/admin.html
+++ b/html/admin.html
@@ -83,7 +83,7 @@
                 <div class="steps-list-content text-center">
                   <img src="images/static/admin-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/admin-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
-                  <p class="h3 bold d-none d-md-block">Add Administrators</p>
+                  <p class="h3 d-none d-md-block">Add Administrators</p>
                 </div>
                 <div class="number">1</div>
               </li>
@@ -91,7 +91,7 @@
                 <div class="steps-list-content text-center">
                   <img src="images/static/dashboard-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/dashboard-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
-                  <p class="h3 bold d-none d-md-block">Add Department </p>
+                  <p class="h3 d-none d-md-block">Add Department </p>
                 </div>
                 <div class="number">2</div>
               </li>
@@ -99,7 +99,7 @@
                 <div class="steps-list-content text-center">
                   <img src="images/static/group-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/group-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
-                  <p class="h3 bold d-none d-md-block">Add Users</p>
+                  <p class="h3 d-none d-md-block">Add Users</p>
                 </div>
                 <div class="number">3</div>
               </li>
@@ -107,7 +107,7 @@
                 <div class="steps-list-content text-center align-middle">
                   <img src="images/static/folder-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/folder-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
-                  <p class="h3 bold d-none d-md-block">Add Classification</p>
+                  <p class="h3 d-none d-md-block">Add Classification</p>
                 </div>
                 <div class="number">4</div>
               </li>
@@ -160,7 +160,7 @@
               <div class="row mb-4">
                 <div class="col">
                   <label for="exampleInputEmail1" class="form-label h3">Email:</label>
-                  <input type="email" class="form-control txt" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control txt" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email address..">
                   <!-- <div id="emailHelp" class="form-text txt half-opacity">We'll never share your email with anyone else.</div> -->
                 </div>
               </div>
@@ -174,7 +174,7 @@
                       <li><a class="dropdown-item" href="#">01</a></li>
                       <li><a class="dropdown-item" href="#">974</a></li>
                     </ul>
-                    <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                    <input type="text" class="form-control txt" aria-label="Text input with dropdown button" placeholder="Enter phone number..">
                   </div>
                 </div>
                 <div class="col-md-6 mb-4 mb-md-0">
@@ -236,7 +236,7 @@
         </div>
         <div class="row justify-content-center my-4">
           <div class="col-md-8 text-center">
-            <a href="javascript:;" class="btn uppercase">Continue</a>
+            <a href="javascript:;" class="btn">Continue</a>
           </div>
         </div>
       </div>
@@ -251,12 +251,9 @@
             </div>
             <div class="footer-content d-inline-block align-middle mx-2">
               <ul>
-                <li>Privacy Policy</li>
-                <li>Terms of Use</li>
-                <li>Legal</li>
-                <!-- <li><a href="javascript:;" class="txt">Privacy Policy</a></li>
+                <li><a href="javascript:;" class="txt">Privacy Policy</a></li>
                 <li><a href="javascript:;" class="txt">Terms of Use</a></li>
-                <li><a href="javascript:;" class="txt">Legal</a></li> -->
+                <li><a href="javascript:;" class="txt">Legal</a></li>
               </ul>
               <p class="txt half-opacity rights">© 2021 Tmam - All Rights Reserved.</p>
             </div>
