--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 p-relative">
-            <div class="content-wrapper fit-height">
+            <div class="content-wrapper fit-height d-flex align-items-center justify-content-center">
               <div class="text-center vertical-center-box">
                 <div class="logo-wrapper big mb-4 mx-auto">
                   <img src="images/static/logo-colored.svg" alt="Logo Colored">
@@ -106,12 +106,9 @@
             </div>
             <div class="footer-content d-inline-block align-middle mx-2">
               <ul>
-                <li>Privacy Policy</li>
-                <li>Terms of Use</li>
-                <li>Legal</li>
-                <!-- <li><a href="javascript:;" class="txt">Privacy Policy</a></li>
+                <li><a href="javascript:;" class="txt">Privacy Policy</a></li>
                 <li><a href="javascript:;" class="txt">Terms of Use</a></li>
-                <li><a href="javascript:;" class="txt">Legal</a></li> -->
+                <li><a href="javascript:;" class="txt">Legal</a></li>
               </ul>
               <p class="txt rights">© 2021 Tmam - All Rights Reserved.</p>
             </div>
