add rest of the wizards

--- a/app/classification.html
+++ b/app/classification.html
@@ -79,15 +79,15 @@
         <div class="row justify-content-center mb-5">
           <div class="col-10">
             <ul class="w-100 d-flex steps-list">
-              <li class="d-inline-block active">
+              <li class="d-inline-block done">
                 <div class="steps-list-content text-center">
                   <img src="images/static/admin-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
-                  <img src="images/static/admin-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
+                  <img src="images/static/folder-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
                   <p class="h3 d-none d-md-block">Add Administrators</p>
                 </div>
                 <div class="number">1</div>
               </li>
-              <li class="d-inline-block">
+              <li class="d-inline-block done">
                 <div class="steps-list-content text-center">
                   <img src="images/static/dashboard-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/dashboard-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
@@ -95,15 +95,15 @@
                 </div>
                 <div class="number">2</div>
               </li>
-              <li class="d-inline-block">
+              <li class="d-inline-block done">
                 <div class="steps-list-content text-center">
                   <img src="images/static/group-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
-                  <img src="images/static/group-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
+                  <img src="images/static/folder-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
                   <p class="h3 d-none d-md-block">Add Users</p>
                 </div>
                 <div class="number">3</div>
               </li>
-              <li class="d-inline-block">
+              <li class="d-inline-block active">
                 <div class="steps-list-content text-center align-middle">
                   <img src="images/static/folder-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/folder-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
@@ -117,34 +117,131 @@
         <div class="row justify-content-center">
           <div class="col-md-8">
             <div class="text-center wizard-content mb-5">
-              <img src="images/static/admin-blue.svg" alt="admin icon" class="icon-blue my-auto mx-auto mb-md-2">
-              <h1>Add Administrators</h1>
-              <p class="txt half-opacity bigger">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</p>
+              <img src="images/static/folder-blue.svg" alt="admin icon" class="icon-blue my-auto mx-auto mb-md-2">
+              <h1>Add Classification</h1>
+              <!-- <p class="txt half-opacity bigger">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</p> -->
             </div>
             <div class="text-center wizard-content mb-5">
+              <div class="row justify-content-center">
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+              </div>
               <div class="row">
-                <div class="col-md-6 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="grey-box text-start">
-                    <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
-                    <p class="txt d-inline-block align-middle">Nadim.Jarudi@tamam.com</p>
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
                     <a href="javascript:;" class="close">
                       <img src="images/static/close.svg" alt="close">
                     </a>
                   </div>
                 </div>
-                <div class="col-md-6 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="grey-box text-start">
-                    <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
-                    <p class="txt d-inline-block align-middle">Indrek.Pari@tmam.com</p>
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
                     <a href="javascript:;" class="close">
                       <img src="images/static/close.svg" alt="close">
                     </a>
                   </div>
                 </div>
-                <div class="col-md-6 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="grey-box text-start">
-                    <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
-                    <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
+                    <a href="javascript:;" class="close">
+                      <img src="images/static/close.svg" alt="close">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                  <div class="grey-box text-start">
+                    <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Cloud Hosting</p>
+                      <p class="txt small"><span class="half-opacity">Ref-001</span></p>
+                    </div>
                     <a href="javascript:;" class="close">
                       <img src="images/static/close.svg" alt="close">
                     </a>
@@ -158,77 +255,23 @@
           <div class="col-md-8">
             <form class="grey-box text-start wizard-content ">
               <div class="row mb-4">
-                <div class="col">
-                  <label for="exampleInputEmail1" class="form-label h3">Email:</label>
-                  <input type="email" class="form-control txt" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email address..">
-                  <!-- <div id="emailHelp" class="form-text txt half-opacity">We'll never share your email with anyone else.</div> -->
+                <div class="col-lg-6 mb-3">
+                  <label for="exampleInputCategory" class="form-label h3">Category Name:</label>
+                  <input type="text" class="form-control txt" id="exampleInputCategory" aria-describedby="" placeholder="Travel">
                 </div>
-              </div>
-              <div class="row mb-4">
-                <div class="col-md-6 mb-4 mb-md-0">
-                  <label for="exampleInputNumber1" class="form-label h3">Mobile number:</label>
-                  <div class="input-group txt" id="exampleInputNumber1">
-                    <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">961</button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">971</a></li>
-                      <li><a class="dropdown-item" href="#">01</a></li>
-                      <li><a class="dropdown-item" href="#">974</a></li>
-                    </ul>
-                    <input type="text" class="form-control txt" aria-label="Text input with dropdown button" placeholder="Enter phone number..">
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4 mb-md-0">
-                  <label for="exampleInputRole1" class="form-label h3">Role:</label>
-                  <select id="exampleInputRole1" class="form-select txt">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                  </select>
-                </div>
-              </div>
-              <div class="row mb-4">
-                <div class="col">
-                  <div class="grey-box text-start wizard-content">
-                    <ul>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Admin Access</p>
-                      </li>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Suspend Cards </p>
-                      </li>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Create Cards</p>
-                      </li>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Create People</p>
-                      </li>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Create</p>
-                      </li>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Create Department</p>
-                      </li>
-                      <li class="half-opacity me-4 mb-2">
-                        <img src="images/static/check.svg" alt="check image" class="d-inline-block me-2">
-                        <p class="txt d-inline-block">Approve Card Requests</p>
-                      </li>
-                    </ul>
-                  </div>
+                <div class="col-lg-6 mb-3">
+                  <label for="exampleInputReference" class="form-label h3">Reference:</label>
+                  <input type="text" class="form-control txt" id="exampleInputReference" aria-describedby="" placeholder="Ref-002">
                 </div>
               </div>
               <div class="row mb-4">
                 <div class="col">
                   <div class="add-new-icon align-middle my-auto">
-                    <img src="images/static/admin-blue.svg" alt="admin icon">
+                    <img src="images/static/folder-blue.svg" alt="admin icon">
                   </div>
                 </div>
                 <div class="col">
-                  <button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#addAdmin">Invite User</button>
+                  <button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#addUser">Add Classification</button>
                 </div>
               </div>
             </form>
@@ -236,7 +279,7 @@
         </div>
         <div class="row justify-content-center my-4">
           <div class="col-md-8 text-center">
-            <a href="department.html" class="btn">Continue</a>
+            <a href="javascript:;" class="btn">Continue</a>
           </div>
         </div>
       </div>
@@ -264,7 +307,7 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="addAdmin" tabindex="-1" aria-labelledby="addAdminLabel" aria-hidden="true">
+    <div class="modal fade" id="addUser" tabindex="-1" aria-labelledby="addUserLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="row mb-4">
@@ -277,7 +320,7 @@
             <p class="txt mb-3 bold">Edit  Admin:</p>
             <div class="col-12 mb-3">
               <div class="grey-box text-start">
-                <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
                 <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
                 <a href="javascript:;" class="close">
                   <img src="images/static/close.svg" alt="close">
@@ -286,7 +329,7 @@
             </div>
             <div class="col-12 mb-3">
               <div class="grey-box text-start">
-                <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
                 <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
                 <a href="javascript:;" class="close">
                   <img src="images/static/close.svg" alt="close">
@@ -295,7 +338,7 @@
             </div>
             <div class="col-12 mb-3">
               <div class="grey-box text-start">
-                <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                <img src="images/static/folder-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
                 <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
                 <a href="javascript:;" class="close">
                   <img src="images/static/close.svg" alt="close">
