--- a/html/user.html
+++ b/html/user.html
@@ -79,15 +79,15 @@
         <div class="row justify-content-center mb-5">
           <div class="col-10">
             <ul class="w-100 d-flex steps-list">
-              <li class="d-inline-block active">
+              <li class="d-inline-block done">
                 <div class="steps-list-content text-center">
                   <img src="images/static/admin-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
-                  <img src="images/static/admin-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
+                  <img src="images/static/group-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
                   <p class="h3 d-none d-md-block">Add Administrators</p>
                 </div>
                 <div class="number">1</div>
               </li>
-              <li class="d-inline-block">
+              <li class="d-inline-block done">
                 <div class="steps-list-content text-center">
                   <img src="images/static/dashboard-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/dashboard-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="number">2</div>
               </li>
-              <li class="d-inline-block">
+              <li class="d-inline-block active">
                 <div class="steps-list-content text-center">
                   <img src="images/static/group-white.svg" alt="" class="icon-white my-auto mx-auto mb-md-2">
                   <img src="images/static/group-blue.svg" alt="" class="icon-blue my-auto mx-auto mb-md-2">
@@ -117,16 +117,19 @@
         <div class="row justify-content-center">
           <div class="col-md-8">
             <div class="text-center wizard-content mb-5">
-              <img src="images/static/admin-blue.svg" alt="admin icon" class="icon-blue my-auto mx-auto mb-md-2">
-              <h1>Add Administrators</h1>
-              <p class="txt half-opacity bigger">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</p>
+              <img src="images/static/group-blue.svg" alt="admin icon" class="icon-blue my-auto mx-auto mb-md-2">
+              <h1>Add Users</h1>
+              <!-- <p class="txt half-opacity bigger">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</p> -->
             </div>
             <div class="text-center wizard-content mb-5">
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <div class="grey-box text-start">
-                    <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
-                    <p class="txt d-inline-block align-middle">Nadim.Jarudi@tamam.com</p>
+                    <img src="images/static/group-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Nadim.Jarudi@tamam.com</p>
+                      <p class="txt small">Marketing <span class="half-opacity">Marketing manager</span></p>
+                    </div>
                     <a href="javascript:;" class="close">
                       <img src="images/static/close.svg" alt="close">
                     </a>
@@ -134,8 +137,11 @@
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="grey-box text-start">
-                    <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
-                    <p class="txt d-inline-block align-middle">Indrek.Pari@tmam.com</p>
+                    <img src="images/static/group-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Nadim.Jarudi@tamam.com</p>
+                      <p class="txt small">Marketing <span class="half-opacity">Marketing manager</span></p>
+                    </div>
                     <a href="javascript:;" class="close">
                       <img src="images/static/close.svg" alt="close">
                     </a>
@@ -143,8 +149,11 @@
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="grey-box text-start">
-                    <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
-                    <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
+                    <img src="images/static/group-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                    <div class="d-inline-block align-middle">
+                      <p class="txt mb-2">Nadim.Jarudi@tamam.com</p>
+                      <p class="txt small">Marketing <span class="half-opacity">Marketing manager</span></p>
+                    </div>
                     <a href="javascript:;" class="close">
                       <img src="images/static/close.svg" alt="close">
                     </a>
@@ -224,11 +233,11 @@
               <div class="row mb-4">
                 <div class="col">
                   <div class="add-new-icon align-middle my-auto">
-                    <img src="images/static/admin-blue.svg" alt="admin icon">
+                    <img src="images/static/group-blue.svg" alt="admin icon">
                   </div>
                 </div>
                 <div class="col">
-                  <button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#addAdmin">Invite User</button>
+                  <button type="button" class="btn float-end" data-bs-toggle="modal" data-bs-target="#addUser">Invite User</button>
                 </div>
               </div>
             </form>
@@ -236,7 +245,7 @@
         </div>
         <div class="row justify-content-center my-4">
           <div class="col-md-8 text-center">
-            <a href="department.html" class="btn">Continue</a>
+            <a href="classification.html" class="btn">Continue</a>
           </div>
         </div>
       </div>
@@ -264,7 +273,7 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="addAdmin" tabindex="-1" aria-labelledby="addAdminLabel" aria-hidden="true">
+    <div class="modal fade" id="addUser" tabindex="-1" aria-labelledby="addUserLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="row mb-4">
@@ -277,7 +286,7 @@
             <p class="txt mb-3 bold">Edit  Admin:</p>
             <div class="col-12 mb-3">
               <div class="grey-box text-start">
-                <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                <img src="images/static/group-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
                 <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
                 <a href="javascript:;" class="close">
                   <img src="images/static/close.svg" alt="close">
@@ -286,7 +295,7 @@
             </div>
             <div class="col-12 mb-3">
               <div class="grey-box text-start">
-                <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                <img src="images/static/group-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
                 <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
                 <a href="javascript:;" class="close">
                   <img src="images/static/close.svg" alt="close">
@@ -295,7 +304,7 @@
             </div>
             <div class="col-12 mb-3">
               <div class="grey-box text-start">
-                <img src="images/static/admin-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
+                <img src="images/static/group-blue.svg" alt="admin icon" class="d-inline-block me-2 align-middle">
                 <p class="txt d-inline-block align-middle">Maseeh.ahmed@tmam.com</p>
                 <a href="javascript:;" class="close">
                   <img src="images/static/close.svg" alt="close">
